deployment/kubernetes/clamav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clamav
spec:
  selector:
    app: clamav
  ports:
  - name: clamd
    port: 3310
    targetPort: clamd
  type: ClusterIP
